--- a/j_5_controlstructure.ipynb
+++ b/j_5_controlstructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 5. 제어흐름\n",
     "\n",
-    "Last updated 20180430MON1300 20180318SUN1743\n",
+    "Last updated 20180501TUE1100 20180318SUN1743\n",
     "\n",
     "## 5.1 학습내용\n",
     "\n",
@@ -1833,7 +1833,7 @@
     "\n",
     "**enum은 switch문과 함께** 많이 사용된다.\n",
     "요일을 enum으로 사용해 보자.\n",
-    "월~토를 집합으로 구성하여 `Day`로 선언한다. 각 요일은 1부터 일련번호로 정수 값이 배정된다."
+    "월~토를 집합으로 구성하여 `Day`로 선언한다."
    ]
   },
   {
@@ -2172,44 +2172,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"194px\" style=\"width:281px;height:194px;\" version=\"1.1\" viewBox=\"0 0 281 194\" width=\"281px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><ellipse cx=\"139\" cy=\"20\" fill=\"#000000\" filter=\"url(#f1)\" rx=\"10\" ry=\"10\" style=\"stroke: none; stroke-width: 1.0;\"/><polygon fill=\"#FEFECE\" filter=\"url(#f1)\" points=\"78.5,50,199.5,50,211.5,62,199.5,74,78.5,74,66.5,62,78.5,50\" style=\"stroke: #A80036; stroke-width: 1.5;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"121\" x=\"78.5\" y=\"66.0525\">a user chooses square</text><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"6\" x=\"60.5\" y=\"59.6528\">y</text><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"14\" x=\"211.5\" y=\"59.6528\">no</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"33.9629\" rx=\"12.5\" ry=\"12.5\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"93\" x=\"10\" y=\"84\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"73\" x=\"20\" y=\"105.4023\">draw square</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"33.9629\" rx=\"12.5\" ry=\"12.5\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"106\" x=\"168.5\" y=\"84\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"86\" x=\"178.5\" y=\"105.4023\">draw rectangle</text><polygon fill=\"#FEFECE\" filter=\"url(#f1)\" points=\"139,123.9629,151,135.9629,139,147.9629,127,135.9629,139,123.9629\" style=\"stroke: #A80036; stroke-width: 1.5;\"/><ellipse cx=\"139\" cy=\"177.9629\" fill=\"none\" filter=\"url(#f1)\" rx=\"10\" ry=\"10\" style=\"stroke: #000000; stroke-width: 1.0;\"/><ellipse cx=\"139.5\" cy=\"178.4629\" fill=\"#000000\" filter=\"url(#f1)\" rx=\"6\" ry=\"6\" style=\"stroke: none; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"66.5\" x2=\"56.5\" y1=\"62\" y2=\"62\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"56.5\" x2=\"56.5\" y1=\"62\" y2=\"84\"/><polygon fill=\"#A80036\" points=\"52.5,74,56.5,84,60.5,74,56.5,78\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"211.5\" x2=\"221.5\" y1=\"62\" y2=\"62\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"221.5\" x2=\"221.5\" y1=\"62\" y2=\"84\"/><polygon fill=\"#A80036\" points=\"217.5,74,221.5,84,225.5,74,221.5,78\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"56.5\" x2=\"56.5\" y1=\"117.9629\" y2=\"135.9629\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"56.5\" x2=\"127\" y1=\"135.9629\" y2=\"135.9629\"/><polygon fill=\"#A80036\" points=\"117,131.9629,127,135.9629,117,139.9629,121,135.9629\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"221.5\" x2=\"221.5\" y1=\"117.9629\" y2=\"135.9629\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"221.5\" x2=\"151\" y1=\"135.9629\" y2=\"135.9629\"/><polygon fill=\"#A80036\" points=\"161,131.9629,151,135.9629,161,139.9629,157,135.9629\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"139\" x2=\"139\" y1=\"30\" y2=\"50\"/><polygon fill=\"#A80036\" points=\"135,40,139,50,143,40,139,44\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"139\" x2=\"139\" y1=\"147.9629\" y2=\"167.9629\"/><polygon fill=\"#A80036\" points=\"135,157.9629,139,167.9629,143,157.9629,139,161.9629\" style=\"stroke: #A80036; stroke-width: 1.0;\"/></g></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%plantuml\n",
-    "@startuml\n",
-    "start\n",
-    "if (a user chooses square)then (y)\n",
-    ":draw square;\n",
-    "else (no)\n",
-    ":draw rectangle;\n",
-    "endif\n",
-    "\n",
-    "stop\n",
-    "@enduml"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {
     "collapsed": false,
@@ -2236,21 +2198,21 @@
     "%%plantuml\n",
     "@startuml\n",
     "\n",
-    "title Conditional - Draw Triangle or Square\n",
+    "title Conditional - Draw Figure or Star\n",
     "\n",
     "start\n",
     "\n",
-    ":get user input (T or S); \n",
+    ":get user input (Triangle Square Pentagon or Star); \n",
     "\n",
     "if (user input is S) then (yes)\n",
-    "  :sides=4;\n",
-    "  :angle=90;\n",
+    "  :compute sides;\n",
+    "  :compute angle;\n",
     "else (no)\n",
-    "  :sides=3;\n",
-    "  :angle=120;\n",
+    "  :sides=5;\n",
+    "  :angle=144;\n",
     "endif\n",
     "\n",
-    ":draw shape with sides, angle;\n",
+    ":draw figure or star with sides, angle;\n",
     "\n",
     "stop\n",
     "\n",
@@ -2957,7 +2919,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -3266,7 +3231,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -3412,7 +3377,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -3708,7 +3676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " char computeGrade(double marks) {\r\n",
+      " char computeGrade(float marks) {\r\n",
       "     //double marks=_marks;\r\n",
       "     char grade=0;\r\n",
       "     if(90<=marks && marks <=100) {\r\n",
@@ -3725,13 +3693,13 @@
       "     System.out.printf(\"You enterd marks %.1f: grade %c\",marks,grade);\r\n",
       "     return grade;\r\n",
       " }\r\n",
-      "|  Added method computeGrade(double)\r\n",
+      "|  Added method computeGrade(float)\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "char computeGrade(double marks) {\n",
+    "char computeGrade(float marks) {\n",
     "    //double marks=_marks;\n",
     "    char grade=0;\n",
     "    if(90<=marks && marks <=100) {\n",
@@ -3752,7 +3720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -3765,21 +3733,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " float marks=(float)91.5;\r\n",
+      "|  Modified variable marks of type float with initial value 91.5\r\n",
+      "|    Update overwrote variable marks\r\n",
+      "\r\n",
+      " char grade=0;\r\n",
+      "|  Modified variable grade of type char with initial value '\u0000'\r\n",
+      "|    Update overwrote variable grade\r\n",
+      "\r\n",
       " grade=computeGrade(marks);\r\n",
       "You enterd marks 91.5: grade A|  Variable grade has been assigned the value 'A'\r\n",
       "\r\n",
-      " System.out.printf(\"You enterd marks %.1f - grade %c\",marks,grade);\r\n",
-      "You enterd marks 91.5 - grade A|  Expression value is: java.io.PrintStream@25bbe1b6\r\n",
-      "|    assigned to temporary variable $7 of type PrintStream\r\n",
+      " System.out.printf(\"You enterd marks %.1f: grade %c\",marks,grade);\r\n",
+      "You enterd marks 91.5: grade A|  Expression value is: java.io.PrintStream@ff5b51f\r\n",
+      "|    assigned to temporary variable $8 of type PrintStream\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "double marks=91.5;\n",
+    "float marks=(float)91.5;\n",
     "char grade=0;\n",
     "grade=computeGrade(marks);\n",
-    "System.out.printf(\"You enterd marks %.1f --> grade %c\",marks,grade);"
+    "System.out.printf(\"You enterd marks %.1f: grade %c\",marks,grade);"
    ]
   },
   {
@@ -3805,9 +3781,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " double marks=91.5;\r\n",
-      "|  Modified variable marks of type double with initial value 91.5\r\n",
-      "|    Update overwrote variable marks\r\n",
+      " double[] marks={101.5, 91.5, 81.5, 71.5, 61.5, 51.5, 41.5};\r\n",
+      "|  Added variable marks of type double[] with initial value [D@3159c4b8\r\n",
+      "|    Update modified method computeGrade(float)\r\n",
       "\r\n",
       " char grade=0;\r\n",
       "|  Modified variable grade of type char with initial value '\u0000'\r\n",
@@ -3835,17 +3811,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " }\r\n",
+      "Restarting java"
+     ]
+    }
+   ],
    "source": [
     "for(double m:marks) {\n",
-    "    grade=computeGrade(m);\n",
+    "    grade=computeGrade((float)m);\n",
     "    //System.out.printf(\"%.1f\",m);\n",
     "    //System.out.printf(\"\\tYou enterd marks %.1f --> grade %c\\n\",m,grade);\n",
     "    System.out.printf(\"\\tYou enterd marks grade %c\\n\",grade);\n",
@@ -4292,7 +4277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -4303,7 +4288,7 @@
      "text": [
       " \"가위\".equals(\"가위\")\r\n",
       "|  Expression value is: true\r\n",
-      "|    assigned to temporary variable $33 of type boolean\r\n",
+      "|    assigned to temporary variable $1 of type boolean\r\n",
       "\r\n"
      ]
     }
@@ -4341,7 +4326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -4417,7 +4402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -4430,8 +4415,7 @@
      "output_type": "stream",
      "text": [
       " String rsp=rspPlayHangul(\"가위\", \"바위\");\r\n",
-      "|  Modified variable rsp of type String with initial value \"바위가 이겼습니다.\"\r\n",
-      "|    Update overwrote variable rsp\r\n",
+      "|  Added variable rsp of type String with initial value \"바위가 이겼습니다.\"\r\n",
       "\r\n",
       " System.out.println(rsp);\r\n",
       "바위가 이겼습니다.\r\n",
@@ -5005,7 +4989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -5018,8 +5002,7 @@
      "output_type": "stream",
      "text": [
       " int[] x={1,2,3,4,5,6,7,8,9};\r\n",
-      "|  Modified variable x of type int[] with initial value [I@31610302\r\n",
-      "|    Update overwrote variable x\r\n",
+      "|  Added variable x of type int[] with initial value [I@5bcab519\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
@@ -5182,10 +5165,10 @@
     "* 연속값을 정의할 때 주의한다. 24.99~25사이의 값을 처리할 수 있는 if조건이 없다.\n",
     "* 주의: operator\n",
     "    * 부등호와 등호가 같이 쓰이는 경우, 부등호를 먼저 쓴다.\n",
-    "    ```\n",
-    "    => (x) >= (o)\n",
-    "    =< (x) <= (o)\n",
-    "    ```"
+    "```java\n",
+    "=> (x) >= (o)\n",
+    "=< (x) <= (o)\n",
+    "```"
    ]
   },
   {
@@ -5245,22 +5228,6 @@
     "} else if (bmi >= 25 && bmi<=29.9) {\n",
     "    System.out.println(\"overweight\");\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "String rspPlayHangul(String sel1, String sel2) {\n",
-    "    String res=null;\n",
-    "    if (sel1.equals(sel2)) {\n",
-    "        res=\"비겼습니다.\";\n",
-    "    } else if (sel1.equals(\"가위\") && (sel2.equals(\"바위\"))) {\n",
-    "        res=\"바위가 이겼습니다.\";"
    ]
   },
   {
