--- a/j_5_controlstructure.ipynb
+++ b/j_5_controlstructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 5. 제어흐름\n",
     "\n",
-    "Last updated 20180501TUE1100 20180318SUN1743\n",
+    "Last updated 20180502WED1130 20180318SUN1743\n",
     "\n",
     "## 5.1 학습내용\n",
     "\n",
@@ -1493,23 +1493,28 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
-    "* 좌표는 두 점 x,y를 사용할 수 있다. 예제에서 사용한다.\n",
-    "    ```\n",
-    "    public Turtle setPos(double x,double y)\n",
-    "    ```\n",
+    "### 좌표\n",
     "\n",
-    "* 또는 Point2D를 위치로 사용할 수 있다.\n",
-    "    ```\n",
-    "    public Turtle setPos(java.awt.geom.Point2D.Double pt)\n",
-    "    ```"
+    "좌표는 다음과 같이 두 점 x,y를 별도로 사용할 수 있다.\n",
+    "```java\n",
+    "public Turtle setPos(double x,double y)\n",
+    "```\n",
+    "\n",
+    "또는 Point2D를 사용하여 x,y를 묶어서 위치로 사용할 수 있다.\n",
+    "```java\n",
+    "public Turtle setPos(java.awt.geom.Point2D.Double pt)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1519,6 +1524,15 @@
      "output_type": "stream",
      "text": [
       " import java.awt.geom.Point2D;\r\n",
+      "\r\n",
+      " \r\n",
+      "\r\n",
+      " Point2D pos1=new Point2D.Double(10,20);\r\n",
+      "|  Added variable pos1 of type Point2D with initial value Point2D.Double[10.0, 20.0]\r\n",
+      "\r\n",
+      " pos1.getX();\r\n",
+      "|  Expression value is: 10.0\r\n",
+      "|    assigned to temporary variable $3 of type double\r\n",
       "\r\n"
      ]
     }
@@ -1527,7 +1541,6 @@
     "import java.awt.geom.Point2D;\n",
     "\n",
     "Point2D pos1=new Point2D.Double(10,20);\n",
-    "\n",
     "pos1.getX();"
    ]
   },
@@ -1588,7 +1601,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "'별'은 오각형과 내각 540, 외곽 72로 동일하다. 따라서 별의 끝 삼각형 각은 180 - 72 x 2 = 36이다.\n",
     "따라서 회전각은 180 - 36 = 144이다.\n",
@@ -1647,23 +1664,28 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
-    "* Pen 색\n",
-    "    * 색은 문자열 java.lang.String 설정할 수 있다.\n",
-    "    * 또는 java.awt.Color로 설정할 수 있다.\n",
+    "### 색 Color\n",
     "\n",
-    "* 색 채우기\n",
-    "    * fill()은 기본 '파란'색으로 칠한다. 설정해 놓으면 그 색으로 칠한다.\n",
-    "    * 색 칠이 끝나면 fillOff()를 호출한다.\n"
+    "색은 문자열 java.lang.String 또는 java.awt.Color로 설정할 수 있다.\n",
+    "도형 등을 칠하려면:\n",
+    "* fill()은 기본 '파란'색으로 칠한다. 설정해 놓으면 그 색으로 칠한다.\n",
+    "* 채우기가 끝나면 fillOff()를 호출한다.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1920,7 +1942,7 @@
    },
    "source": [
     "switch case에서 **\"MONDAY\"와 같이 하지 않는다**. **문자열이 아니라 상수**이다.\n",
-    "아래 코드에서 MONDAY는 **break 문이 있는 FRIDAY에서 비로서 switch에서 빠져** 나온다."
+    "아래 코드에서 MONDAY는 **break 문이 있는 FRIDAY에서 비로서 switch 문으로부터 빠져** 나온다."
    ]
   },
   {
@@ -2230,13 +2252,14 @@
     "### 사용자 입력과 비교할 경우\n",
     "\n",
     "Shape을 enum으로 선언한다.\n",
-    "사용자 입력을 대문자로 변환하여 해당하는 enum 값을 결정한다.\n",
+    "사용자가 \"Square\"라고 입력했다고 하자.\n",
+    "그 입력을 대문자로 변환하여 해당하는 enum 값을 결정한다.\n",
     "**Shape.valueOf(String name)**은 문자열에 해당하는 'enum 값'을 반환한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2249,11 +2272,11 @@
       " enum Shape {TRIANGLE, SQUARE, RECTANGLE, PENTAGON, STAR}\r\n",
       "|  Added enum Shape\r\n",
       "\r\n",
-      " Scanner sc=new Scanner(\"SQUARE\");         //문자열을 사용자 입력으로 사용함\r\n",
+      " Scanner sc=new Scanner(\"Square\");         //문자열을 사용자 입력으로 사용함\r\n",
       "|  Added variable sc of type Scanner with initial value java.util.Scanner[delimiters=\\p{javaWhitespace}+][position=0][match valid=false][need input=false][source closed=false][skipped=false][group separator=\\,][decimal separator=\\.][positive prefix=][negative prefix=\\Q-\\E][positive suffix=][negative suffix=][NaN string=\\QNaN\\E][infinity string=\\Q∞\\E]\r\n",
       "\r\n",
       " String s=sc.next();                       //사용자 입력을 문자열로 받음\r\n",
-      "|  Added variable s of type String with initial value \"SQUARE\"\r\n",
+      "|  Added variable s of type String with initial value \"Square\"\r\n",
       "\r\n",
       " Shape sel=Shape.valueOf(s.toUpperCase()); //사용자 입력을 대문자로 변환하여 enum 값 으로 정함\r\n",
       "|  Added variable sel of type Shape with initial value SQUARE\r\n",
@@ -2266,7 +2289,7 @@
    ],
    "source": [
     "enum Shape {TRIANGLE, SQUARE, RECTANGLE, PENTAGON, STAR}\n",
-    "Scanner sc=new Scanner(\"SQUARE\");         //문자열을 사용자 입력으로 사용함\n",
+    "Scanner sc=new Scanner(\"Square\");         //문자열을 사용자 입력으로 사용함\n",
     "String s=sc.next();                       //사용자 입력을 문자열로 받음\n",
     "Shape sel=Shape.valueOf(s.toUpperCase()); //사용자 입력을 대문자로 변환하여 enum 값 으로 정함\n",
     "System.out.println(sel);"
@@ -2936,7 +2959,7 @@
     "        int nBigger=2;\n",
     "        for(int i=0;i<turns;i++) {\n",
     "            if (i%nBigger!=0) {\n",
-    "            size+=bigger;\n",
+    "                size+=bigger;\n",
     "            }\n",
     "            t1.forward(size);\n",
     "            t1.right(degree);\n",
@@ -3358,6 +3381,7 @@
     "###  클래스로 만들기\n",
     "\n",
     "* 앞서 테스트한 내용을 함수 `double convertTemperature(String sel,double temp)`로 구현하여 클래스에 넣는다.\n",
+    "double타잎을 사용하면 float, double 모두 사용할 수 있게 된다.\n",
     "\n",
     "* 함수의 입력\n",
     "\n",
@@ -3458,30 +3482,6 @@
    },
    "source": [
     "* 다분기 다이어그램 형식"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%%plantuml\n",
-    "@startuml\n",
-    "start\n",
-    "\n",
-    ":get user input marks;\n",
-    "if()\n",
-    "elseif()\n",
-    "elseif()\n",
-    "elseif()\n",
-    "elseif()\n",
-    "endif\n",
-    ":print grade;\n",
-    "stop\n",
-    "@enduml"
    ]
   },
   {
@@ -3700,7 +3700,6 @@
    ],
    "source": [
     "char computeGrade(float marks) {\n",
-    "    //double marks=_marks;\n",
     "    char grade=0;\n",
     "    if(90<=marks && marks <=100) {\n",
     "        grade='A';\n",
@@ -3767,7 +3766,7 @@
    },
    "source": [
     "* 테스트 늘려서 해보기\n",
-    "* 100점이 넘는 경우 처리에 오류가 있다."
+    "* 점수가 100점이 넘는 경우, 프로그램에 오류가 있다. 마지막 else문으로 걸려서 'F'로 출력된다."
    ]
   },
   {
@@ -3794,7 +3793,7 @@
    ],
    "source": [
     "double[] marks={101.5, 91.5, 81.5, 71.5, 61.5, 51.5, 41.5};\n",
-    "char grade=0;"
+    "char grade='';"
    ]
   },
   {
@@ -3806,7 +3805,8 @@
     }
    },
    "source": [
-    "* ?노트북에서는 오류. jshell에서는 ok"
+    "computeGrade()를 호출하여 등급을 계산한다.\n",
+    "marks는 double 타잎이므로 강제변환을 float로 하여 사용한다."
    ]
   },
   {
@@ -4566,7 +4566,7 @@
     "Storage Area | Constant String Pool | Heap | Heap \n",
     "Modifiable | No (immutable) | Yes( mutable ) | Yes( mutable )\n",
     "Thread Safe | Yes | Yes | No\n",
-    "Performance | Fast | Very slow | Fastb\n"
+    "Performance | Fast | Very slow | Fast\n"
    ]
   },
   {
@@ -4745,7 +4745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -4760,12 +4760,10 @@
       "|    Update overwrote variable s\r\n",
       "\r\n",
       " String white=\" \";\r\n",
-      "|  Modified variable white of type String with initial value \" \"\r\n",
-      "|    Update overwrote variable white\r\n",
+      "|  Added variable white of type String with initial value \" \"\r\n",
       "\r\n",
       " StringBuffer sbuf=new StringBuffer();\r\n",
-      "|  Modified variable sbuf of type StringBuffer with initial value \r\n",
-      "|    Update overwrote variable sbuf\r\n",
+      "|  Added variable sbuf of type StringBuffer with initial value \r\n",
       "\r\n",
       " for(int i=0;i<5;i++) {\r\n",
       "     for(int j=5;j>i;j--) {\r\n",
@@ -4796,7 +4794,7 @@
     "    }\n",
     "    for(int k=0;k<i;k++) {\n",
     "        sbuf.append(s);\n",
-    "    }subf\n",
+    "    }\n",
     "    System.out.printf(\"%d %s\\n\",i,sbuf.toString());\n",
     "    sbuf.delete(0, sbuf.length());\n",
     "}"
@@ -4981,10 +4979,22 @@
    "source": [
     "## 제어-8:  구구단의 출력\n",
     "\n",
-    "* 구구단을 출력한다.\n",
-    "* 프로그래밍 요소\n",
-    "    * 중첩 for를 사용할 수 있다.\n",
-    "    * 형식에 맞추어 출력문을 사용할 수 있다."
+    "### 문제\n",
+    "\n",
+    "구구단에는 일정한 패턴이 들어가 있다.\n",
+    "이러한 패턴을 찾아내어 반복문으로 만들어 보자.\n",
+    "구구단을 출력하려면 정렬, 줄바꿈 스타일이 적용되어야 보기 좋다.\n",
+    "\n",
+    "### 해결\n",
+    "\n",
+    "한 수가 고정되고 다른 수가 변하는 패턴이 반복된다. 2차원으로 변화가 있으므로 중첩 for를 사용한다.\n",
+    "```python\n",
+    "1 x 1 = 1  1 x 2 = 2 1 x 3 = 3 ...\n",
+    "2 x 1 = 2  2 x 2 = 4 2 x 3 = 6 ...\n",
+    "...\n",
+    "```\n",
+    "\n",
+    "**한글**이 포함되어 있으므로 **윈도우에서 유니코드를 지원하지 않는 편집기**는 출력이 깨질 수 있다."
    ]
   },
   {
