--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 6. 데이터구조\n",
     "\n",
-    "Last updated 20180507MON2030 20180329THR1730\n",
+    "Last updated 20180507MON2100 20180329THR1730\n",
     "\n",
     "## 6.1 학습내용\n",
     "\n",
@@ -484,10 +484,10 @@
     "### API\n",
     "\n",
     "JCF에서 List, Set, Map에서 제공하는 데이터 관련 API를 살펴 보자.\n",
-    "* 앞서 각 데이터구조의 특징을 살펴보았다. 입력, 읽기, 수정, 삭제와 같은 API를 사용하면서 순서가 있는 경우에는 인덱스로, 순서가 없는 경우는 키를 사용한다.\n",
+    "* 앞서 각 데이터구조의 특징을 살펴보았다. 입력, 읽기, 수정, 삭제와 같은 API를 사용하면서 **순서가 있는 경우에는 인덱스**로, **순서가 없는 경우는 키**를 사용한다.\n",
     "* 데이터가 많아지면서 생기는 검색, 정렬, 복사\n",
-    "    * 그러나 검색 API는 Iterator를 사용한다 . 앞서 살펴본 바와 같이, Iterable을 상속하므로 Iterator패턴을 사용할 수 있다.\n",
-    "    * 정렬 역시 comparable, comparator를 사용할 수 있다.\n"
+    "    * 그러나 **검색 API는 Iterator를 사용**한다 . 앞서 살펴본 바와 같이, Iterable을 상속하므로 Iterator패턴을 사용할 수 있다.\n",
+    "    * **정렬** 역시 **comparable**, **comparator**를 사용할 수 있다.\n"
    ]
   },
   {
@@ -525,8 +525,8 @@
     "\n",
     "구분 | Collection | Array\n",
     "----------|----------|----------\n",
-    "원시타잎 | 원시타잎을 가질 수 없다. 객체만 가진다.  | 원시타잎과 객체 모두 가질 수 있다.\n",
-    "크기 | 늘어날 수 있다. | 미리 정해야 한다. 정하면 변경할 수 없다.\n",
+    "원시타잎 | 원시타잎을 가질 수 없다. **객체만** 가진다.  | **원시타잎과 객체 모두** 가질 수 있다.\n",
+    "크기 | **늘어날 수 있다**. | 미리 정해야 한다. 정하면 **변경할 수 없다**.\n",
     "사용성 | 편리하다. | 불편하다. toString, sort, iterator를 사용할 수 없다. 사용하려면 Arrays.asList(array).iterator();\n",
     "성능 | 메모리는 적게 쓰지만, 성능은 상대적으로 떨어진다 | 메모리는 많이 쓰지만, 성능은 상대적으로 좋다\n"
    ]
@@ -630,15 +630,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "선언과 초기화를 같이 하는 경우이다. 이럴 경우 배열의 크기는 자동으로 할당된다."
    ]
@@ -826,15 +824,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "데이터를 저장하고 문자열에 \"Paris\"가 있다면 출력하는 반복문을 사용해 보자."
    ]
@@ -980,15 +975,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "2차원 데이터에 대한 중첩반복문을 사용하여 출력할 수 있다."
    ]
@@ -1033,26 +1025,27 @@
     "\n",
     "* 서로 연관되어 있는 배열 2개를 말한다.\n",
     "* 세계공항의 기온 [항공기상청 공항](http://amo.kma.go.kr/)\n",
+    "    * 공항명은 문자열, 온드는 정수이다. 서로 데이터 타잎이 다른 경우 사용할 수 있다.\n",
+    "    * 연관배열은 동일한 인덱스를 가지고 연결될 수 있다.\n",
     "\n",
-    "공항 | 기온\n",
+    "공항 | 기온 (섭씨)\n",
     "-------|-------\n",
     "도쿄국제공항 | 13\n",
     "베이징 수도 국제공항 | 06\n",
     "런던히드로공항 | 05\n",
     "시드니 공항 | 18\n",
     "존.F.케네디 | 17\n",
-    "조모케냐타국제공항 | 17\n",
-    "\n",
-    "    * 공항명은 문자열, 온드는 정수이다. 서로 데이터 타잎이 다른 경우 사용할 수 있다.\n",
-    "    * 연관배열은 동일한 인덱스를 가지고 연결될 수 있다.\n",
-    "\n"
+    "조모케냐타국제공항 | 17\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1115,7 +1108,7 @@
     "\n",
     "### 문제\n",
     "문장을 만드는 프로그램은 복잡하다. 상황에 맞는 단어, 문장, 주제를 선별하기 위해서는 상당한 인공지능이 필요할 것이다.\n",
-    "채팅봇이란 사람과 대화를 할 수 있는 로봇을 말한다. 심심이는 2002년 개발한 인공지능 대화 엔진으로 일상에서 심심할 때 대화를 나눌 수 있다. 비행기 예약과 같은 업무에서도 활용할 수 있다. 여기서는 매우 단순한 영어 문장을 무작위로 만들어 보자.\n",
+    "**채팅봇**이란 사람과 대화를 할 수 있는 로봇을 말한다. 심심이는 2002년 개발한 인공지능 대화 엔진으로 일상에서 심심할 때 대화를 나눌 수 있다. 비행기 예약과 같은 업무에서도 활용할 수 있다. 여기서는 매우 단순한 영어 문장을 무작위로 만들어 보자.\n",
     "한글은 조사와 동사의 변화가 있어 문장을 만들기 쉽지 않다.\n",
     "\n",
     "### 해결\n",
@@ -1305,8 +1298,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "public class StringMirrorMain {\n",
     "    static String mirror(String hello) {\n",
@@ -1621,12 +1618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "-"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1636,30 +1630,21 @@
       " List list = new ArrayList();\r\n",
       "|  Added variable list of type List with initial value []\r\n",
       "\r\n",
-      " list.add(\"foo\");\r\n",
+      " list.add(\"foo\");              //문자 \"foo\"를 저장\r\n",
       "|  Warning:\r\n",
       "|  unchecked call to add(E) as a member of the raw type java.util.List\r\n",
-      "|  list.add(\"foo\");\r\n",
+      "|  list.add(\"foo\");              //문자 \"foo\"를 저장\r\n",
       "|  ^-------------^\r\n",
       "|  Expression value is: true\r\n",
-      "|    assigned to temporary variable $16 of type boolean\r\n",
+      "|    assigned to temporary variable $155 of type boolean\r\n",
       "\r\n",
-      " list.add(new Integer(123));   //숫자 123이건 문자 \"foo\"를 저장할 수 있다.\r\n",
+      " list.add(new Integer(123));   //숫자 123이든지 문자 \"foo\"이든지 저장할 수 있다.\r\n",
       "|  Warning:\r\n",
       "|  unchecked call to add(E) as a member of the raw type java.util.List\r\n",
-      "|  list.add(new Integer(123));   //숫자 123이건 문자 \"foo\"를 저장할 수 있다.\r\n",
+      "|  list.add(new Integer(123));   //숫자 123이든지 문자 \"foo\"이든지 저장할 수 있다.\r\n",
       "|  ^------------------------^\r\n",
       "|  Expression value is: true\r\n",
-      "|    assigned to temporary variable $17 of type boolean\r\n",
-      "\r\n",
-      " \r\n",
-      "\r\n",
-      " for(Object obj : list)\r\n",
-      "     String str=(String) obj;  //숫자 123을 casting하고 있으므로 오류\r\n",
-      "|  Error:\r\n",
-      "|  variable declaration not allowed here\r\n",
-      "|      String str=(String) obj;  //숫자 123을 casting하고 있으므로 오류\r\n",
-      "|      ^----------------------^\r\n",
+      "|    assigned to temporary variable $156 of type boolean\r\n",
       "\r\n"
      ]
     }
@@ -1667,8 +1652,34 @@
    "source": [
     "List list = new ArrayList();\n",
     "list.add(\"foo\");              //문자 \"foo\"를 저장\n",
-    "list.add(new Integer(123));   //숫자 123이든지 문자 \"foo\"이든지 저장할 수 있다.\n",
-    "\n",
+    "list.add(new Integer(123));   //숫자 123이든지 문자 \"foo\"이든지 저장할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " for(Object obj : list)\r\n",
+      "     String str=(String) obj;  //사용할 경우, casting이 문제. 숫자를 casting하면 오류\r\n",
+      "|  Error:\r\n",
+      "|  variable declaration not allowed here\r\n",
+      "|      String str=(String) obj;  //사용할 경우, casting이 문제. 숫자를 casting하면 오류\r\n",
+      "|      ^----------------------^\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
     "for(Object obj : list)\n",
     "    String str=(String) obj;  //사용할 경우, casting이 문제. 숫자를 casting하면 오류"
    ]
@@ -1846,7 +1857,10 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -2356,9 +2370,9 @@
     "    * 함수이름 sumList\n",
     "    * 입력 ArrayList 리스트 - 부모 List로 argument를 넘겨 주어도 된다.\n",
     "    * 출력 int 합계값\n",
-    "        ```\n",
-    "        int sumList(ArrayList<Integer> aList)\n",
-    "        ```"
+    "```java\n",
+    "int sumList(ArrayList<Integer> aList)\n",
+    "```"
    ]
   },
   {
@@ -2653,15 +2667,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "거북이 라이브러리 aplu5.jar를 classpath에 추가한다.\n",
     "그리고 ```import ch.aplu.turtle.*```로 거북이를 가져온다."
@@ -2991,14 +3003,7 @@
     "    * 함수명 drawSquareFrom()\n",
     "    * 입력 argument\n",
     "        * 4점을 가지고 있는 구조 tracks 사각형 위치가 저장된 데이터구조\n",
-    "    * 출력 none\n",
-    "\n",
-    "* 프로그래밍 요소\n",
-    "    * 데이터구조를 생성할 수 있다.\n",
-    "    * 데이터구조를 함수에 전달할 수 있다.\n",
-    "    * 전달하는 값의 의미가 컴퓨터에서는 특별하다.\n",
-    "    * 값이 전달되는 것인지, 값이 저장된 메모리 값이 전달되는지 구별한다. 지금은 자세한 설명을 생략한다.\n",
-    "    * 값이 전달되는 것을 (pass by value), 참조 값이 전달되는 것과 (pass by reference)와 구별한다."
+    "    * 출력 none\n"
    ]
   },
   {
@@ -3112,7 +3117,8 @@
     }
    },
    "source": [
-    "* 함수로 만들어 본다."
+    "* 함수로 만들어 본다.\n",
+    "* 자바는 값이 전달된다 (pass by value). 참조 값이 전달되는 것과 (pass by reference)와 구별한다."
    ]
   },
   {
@@ -3499,7 +3505,7 @@
    "source": [
     "### 데이터구조 생성\n",
     "\n",
-    "데이터 특징을 살펴보면 모두 정수이고 그 범위가 6자리를 넘어가지 않고 있다.\n",
+    "데이터 특징을 살펴보면 모두 정수이고 그 숫자 크기의 범위가 6자리를 넘어가지 않고 있다.\n",
     "```int[][]```으로 선언한다."
    ]
   },
@@ -3915,7 +3921,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -3952,7 +3958,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "* setArr0() 안에서 값을 변경하면 그 효과가 함수 밖에서도 지속된다."
    ]
@@ -4617,7 +4627,10 @@
    "execution_count": 65,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -4728,6 +4741,11 @@
     "또한 키에 따라 데이터를 사용하므로 배열, 리스트와 같은 구조에서 **순서**는 의미가 없다.\n",
     "javascript의 JSON, Python의 dictionary 등과 같이 HashMap이다.\n",
     "또한 Python과 같은 언어에서 지원하는 associative array를 자바에서는 지원하지 않는다. Map으로 흉내낼 수 있다.\n",
+    "사용하는 경우는:\n",
+    "* 자료가 필드, 값으로 구성된 경우\n",
+    "    * 예: 이름-'홍길동'. key -> '이름', value -> '홍길동'. key-value는 수, 문자 모두 가능.\n",
+    "* 자료의 갯수를 세는 경우\n",
+    "    * 데이터에 각 단어가 발생하는 빈도수를 세는 경우\n",
     "\n",
     "HashMap | HashSet\n",
     "----------|----------\n",
@@ -4868,83 +4886,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Map\n",
-    "\n",
-    "* 선언을 하고 사용.\n",
-    "* key-value로 구성.\n",
-    "* 사용하는 경우\n",
-    "    * 자료가 필드, 값으로 구성된 경우\n",
-    "        * 예: 이름-'홍길동'. key -> '이름', value -> '홍길동'. key-value는 수, 문자 모두 가능.\n",
-    "    * 자료의 갯수를 세는 경우\n",
-    "        * 데이터에 각 단어가 발생하는 빈도수를 세는 경우"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* generic hash map 만들기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Map<String, String> m = new HashMap<String, String>();\r\n",
-      "|  Added variable m of type Map<String, String> with initial value {}\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "Map<String, String> m = new HashMap<String, String>();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " m.put(\"name\", \"jsl\");\r\n",
-      "|  Expression value is: null\r\n",
-      "|    assigned to temporary variable $2 of type String\r\n",
-      "\r\n",
-      " System.out.print(\"\\t\" + m);\r\n",
-      "\t{name=jsl}\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "m.put(\"name\", \"jsl\");\n",
-    "System.out.print(\"\\t\" + m);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -4992,7 +4933,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -5238,7 +5182,7 @@
    },
    "source": [
     "* java 8\n",
-    "```\n",
+    "```java\n",
     "Map<String, Integer> words = new HashMap<>();\n",
     "words.put(\"hello\", 3);\n",
     "words.put(\"world\", 4);\n",
@@ -5374,15 +5318,16 @@
    "source": [
     "## 데이터구조-11: 문자열에 포함된 문자와 숫자의 개수 세기\n",
     "\n",
-    "* 문자열을 입력받고, 그 문자열에 포함된 숫자와 문자의 갯수를 세기\n",
+    "### 문제\n",
+    "문자열을 입력받고, 그 문자열에 포함된 숫자와 문자의 갯수를 세기\n",
     "\n",
-    "* 프로그래밍 요소\n",
-    "    * 컴퓨터가 문자를 식별하는 방식을 이해한다.\n",
-    "    * key, value를 사용하여 빈도를 계산할 수 있다.\n",
-    "* 함수\n",
-    "    * 함수명 countDigitsLetters\n",
-    "    * 입력 문자열 word\n",
-    "    * 출력 HashMap"
+    "### 해결\n",
+    "컴퓨터가 문자를 식별하는 방식을 이해한다.\n",
+    "key, value를 사용하여 빈도를 계산할 수 있다.\n",
+    "함수:\n",
+    "* 함수명 countDigitsLetters\n",
+    "* 입력 문자열 word\n",
+    "* 출력 HashMap"
    ]
   },
   {
